cpp_library/include/arpirobot/bridge.hpp

using namespace arpirobot;
// Once the other language copies data out of the returned string free the memory
// THIS MUST BE MANUALLY CALLED BY THE OTHER LANGUAGE's BRIDGE
BRIDGE_FUNC void freeString(char *str);
BRIDGE_FUNC BaseRobot* BaseRobot_create(void (*robotStarted)(void), 
                        void (*robotStopped)(void),
                        void (*robotEnabled)(void), 
                        void (*robotDisabled)(void), 
                        void (*enabledPeriodic)(void), 
                        void (*disabledPeriodic)(void), 
                        void (*periodic)(void));
BRIDGE_FUNC void BaseRobot_destroy(BaseRobot *robot);
BRIDGE_FUNC void BaseRobot_start(BaseRobot *robot);
BRIDGE_FUNC void BaseRobot_feedWatchdog(BaseRobot *robot);
////////////////////////////////////////////////////////////////////////////////
/// MainVMon Bridge
////////////////////////////////////////////////////////////////////////////////

BRIDGE_FUNC void MainVMon_makeMainVmon(MainVmon *vmon);
////////////////////////////////////////////////////////////////////////////////
/// NetworkTable Bridge
////////////////////////////////////////////////////////////////////////////////

BRIDGE_FUNC void NetworkTable_set(const char *key, const char *value);
BRIDGE_FUNC char *NetworkTable_get(const char *key);
BRIDGE_FUNC bool NetworkTable_has(const char *key);
////////////////////////////////////////////////////////////////////////////////
/// Logger Bridge
////////////////////////////////////////////////////////////////////////////////

BRIDGE_FUNC void Logger_logDebug(const char *message);
BRIDGE_FUNC void Logger_logInfo(const char *message);
BRIDGE_FUNC void Logger_logWarning(const char *message);
BRIDGE_FUNC void Logger_logError(const char *message);
BRIDGE_FUNC void Logger_logDebugFrom(const char *source, const char *message);
BRIDGE_FUNC void Logger_logInfoFrom(const char *source, const char *message);
BRIDGE_FUNC void Logger_logWarningFrom(const char *source, const char *message);
BRIDGE_FUNC void Logger_logErrorFrom(const char *source, const char *message);
BRIDGE_FUNC void Logger_logNewline();
////////////////////////////////////////////////////////////////////////////////
/// BaseDevice bridge
////////////////////////////////////////////////////////////////////////////////

BRIDGE_FUNC char *BaseDevice_getDeviceName(BaseDevice *device);
////////////////////////////////////////////////////////////////////////////////
/// Gamepad bridge
////////////////////////////////////////////////////////////////////////////////

BRIDGE_FUNC Gamepad *Gamepad_create(int controllerNum);
BRIDGE_FUNC void Gamepad_destroy(Gamepad *gamepad);
BRIDGE_FUNC int Gamepad_getControllerNum(Gamepad *gamepad);
BRIDGE_FUNC double Gamepad_getAxis(Gamepad *gamepad, int axisNum, double deadband);
BRIDGE_FUNC bool Gamepad_getButton(Gamepad *gamepad, int buttonNum);
BRIDGE_FUNC int Gamepad_getDpad(Gamepad *gamepad, int dpadNum);
BRIDGE_FUNC void Gamepad_setAxisTransform(Gamepad *gamepad, int axisNum, BaseAxisTransform *transform);
BRIDGE_FUNC void Gamepad_clearAxisTransform(Gamepad *gamepad, int axisNum);
BRIDGE_FUNC void BaseCamera_setFrameCallback(BaseCamera *cam, void (*callback)(int, int, int, uint8_t*));